2003-03-28 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Relax zero check.

2003-03-24 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Improve handling of false zeros.

2003-03-07 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Tune series solver.
	* slabdisp.cpp: Ditto.

2003-02-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Add series solver.
	* slab.cpp: Ditto.
	* slaboverlap.cpp: Ditto.
	* slaboverlap.h: Ditto.

2003-01-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Make insensitive to whether E_wall is explicitly set.

2003-01-17 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabdisp.cpp: Better criterion for scaling.

2002-12-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.h: Add get_cos, get_sin.
	* slabmode.cpp: Ditto.

2002-12-12 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmode.cpp: Consolidate signed_sqrt.

2002-12-02 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Switch to enable backward modes.

2002-12-02 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Tmp disable backward modes.

2002-11-27 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.h: Add eps_avg.
	* slab.cpp: Ditto.

2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Better check for uniform Slabs.

2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Improve detection of non-zero minima.

2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slab.cpp: Rename left/right to lower/upper.
	* slabdisp.cpp: Ditto.
	* slabdisp.h: Ditto.
	* slabmode.cpp: Ditto.
	* slabmode.h: Ditto.

2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Change threshold for complex modes.

2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * slab.cpp: Major in change in the way PML is defined.
	* slab.h: Ditto.
	* slabmode.cpp: Ditto.

2002-06-06 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
