@@ -75,7 +75,10 @@ class Slab_M : public SlabImpl
     std::vector<Complex> find_kt_from_scratch_by_ADR();
     std::vector<Complex> find_kt_from_scratch_by_track();
     std::vector<Complex> find_kt_by_sweep(std::vector<Complex>& old_kt);
-    std::vector<Complex> find_kt_from_series();
+    std::vector<Complex> find_kt_from_estimates();
+
+    cVector estimate_kz2_from_RCWA();
+    cVector estimate_kz2_from_uniform_modes();      
 
     void build_modeset(const std::vector<Complex>& kt);
 
@@ -85,6 +88,8 @@ class Slab_M : public SlabImpl
     std::vector<Complex>   thicknesses;
 
     int M_series;
+
+    cVector fourier_eps(int M, cVector* inv_eps=NULL) const;
 
     friend class Slab_M_Mode;
     friend class UniformSlab;
